[package]
name = "ez9"
version = "0.1.0"
edition = "2021"
authors = ["adlsdztony <zzl0712@connect.hku.hk>"]
license = "MIT OR Apache-2.0"
description = "A command line tool for cutting images into 9 equal parts for wechat pyq. "
readme = "README.md"
homepage = "https://github.com/adlsdztony/ez9"
repository = "https://github.com/adlsdztony/ez9"
keywords = ["wechat", "pyq", "image", "cut", "wechat moments"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
winreg = "0.51.0"